--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <li>Create a practical with Form templates (min. 2)<a href="HTML files/practical14.html" target="blank">Practical 14</a></li>
         <li>Create a practical for Increasing and Decreasing Counter.<a href="HTML files/practical15.html" target="blank">Practical 15</a></li>
         <li>Create a practical for To-Do List Application. <a href="HTML files/practical16.html" target="_blank">Practical 16</a></li>
+        <li>Create a practical for Real-Time Clock Application. <a href="HTML files/practical17.html" target="_blank">Practical 17</a></li>
     </ol>
 </body>
 </html>
