--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <li>Create a practical for Increasing and Decreasing Counter.<a href="HTML files/practical15.html" target="blank">Practical 15</a></li>
         <li>Create a practical for To-Do List Application. <a href="HTML files/practical16.html" target="_blank">Practical 16</a></li>
         <li>Create a practical for Real-Time Clock Application. <a href="HTML files/practical17.html" target="_blank">Practical 17</a></li>
+        <li>Create a practical for Real-Time form application. <a href="HTML files/practical18.html" target="_blank">Practical 18</a></li>
     </ol>
 </body>
 </html>
