--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <li>Create a practical for To-Do List Application. <a href="HTML files/practical16.html" target="_blank">Practical 16</a></li>
         <li>Create a practical for Real-Time Clock Application. <a href="HTML files/practical17.html" target="_blank">Practical 17</a></li>
         <li>Create a practical for Real-Time form application. <a href="HTML files/practical18.html" target="_blank">Practical 18</a></li>
+        <li>Create a practical for multi-step form. <a href="HTML files/practical19.html" target="_blank">Practical 19</a></li>
     </ol>
 </body>
 </html>
